Bug 511546 - EXIF dialog displays incomplete dates
Summary: EXIF dialog displays incomplete dates
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: EXIF viewer/search (other bugs)
Version First Reported In: 6.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-02 21:07 UTC by Johannes Zarl-Zierl
Modified: 2025-11-08 00:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the Exif-information dialog (16.32 KB, image/png)
2025-11-02 21:07 UTC, Johannes Zarl-Zierl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2025-11-02 21:07:54 UTC
Created attachment 186433 [details]
Screenshot of the Exif-information dialog

SUMMARY

> I am running Kphotoalbum 6.1.0 on Opensuse Tumbleweed.  I upgraded from
> 6.0.1 to see if it solves the problem.
> I noticed that exif dates are shown without the day.  It shows just the
> year and the month.  Some other information seems to be wrong sometimes.
> To see correct  exif information  with exiftool I created a shell script
> that runs exiftool ${filename} | xmessage -file - selecting "Your Command
> Line".[image: Screenshot_20251027_132305.png]
> 
>  I limited it to show up to 3 files at a time because sometimes %all has a
> complete list of files.


STEPS TO REPRODUCE
1. Enable display of a DateTime field in the "EXIF/IPTC" settings dialog (e.g. Exif.Image.DateTime)
2. Open an image with EXIF information in the viewer
3. Open the context menu via right-click and select the EXIF Info dialog

OBSERVED RESULT
The DateTime field is displayed incompletely, as "YYYY:MM:" (e.g. "2025:10:").

EXPECTED RESULT
The DateTime field should be displayed completely, including the full date and time information.
Comment 1 Johannes Zarl-Zierl 2025-11-08 00:41:18 UTC
Git commit 67afb50bbc5ce3f61ceecdf04f857988d1d061d3 by Johannes Zarl-Zierl.
Committed on 08/11/2025 at 00:39.
Pushed by johanneszarl into branch 'master'.

Fix date/time display in EXIF dialog

Date/Time strings in the EXIF data were incorrectly truncated before
display since the Qt6/KF6 transition.

M  +1    -0    CHANGELOG.md
M  +4    -5    lib/kpaexif/Info.cpp

https://invent.kde.org/graphics/kphotoalbum/-/commit/67afb50bbc5ce3f61ceecdf04f857988d1d061d3