Fix date/time display in EXIF dialog

Date/Time strings in the EXIF data were incorrectly truncated before
display since the Qt6/KF6 transition.

BUG: 511546